register cleaning up

--- a/views/complete-profile.hbs
+++ b/views/complete-profile.hbs
@@ -4,10 +4,7 @@
         <div class="card-panel">
 
             <div class="row center-align">
-                <video width="165" height="165" autoplay muted>
-                    <source src="/images/logos/animated-logo-small.webm" type="video/webm">
-                    <img src="/images/logos/question-square.png">
-                </video>
+                <h2>Complete your profile</h2>
             </div>
 
           <form id="profile-update-form" action="/complete-profile" method="post" onkeypress="return event.keyCode != 13;" onsubmit="validateInputs(event)" >
