--- a/views/register.hbs
+++ b/views/register.hbs
@@ -13,7 +13,7 @@
             <div class="row">
                 <form id="initial-registration-form" class="col s12" action="/register" method="post">
 
-                    <div class="row">
+
                         <div class="input-field col s12 m6">
                             <input id="first_name" name="first_name" type="text" class="signup-text-field validate">
                             <label for="first_name" class="signup-label">First Name</label>
@@ -22,14 +22,13 @@
                             <input id="last_name" name="last_name" type="text" class="signup-text-field validate">
                             <label for="last_name" class="signup-label">Last Name</label>
                         </div>
-                    </div>
-                    <div class="row">
+
                         <div class="input-field col s12">
                             <input id="email" type="email" class="signup-text-field validate">
                             <label for="email" class="signup-label">Email</label>
                         </div>
-                    </div>
-                    <div class="row no-bottom">
+
+
                         <div class="input-field col s12">
                             <input id="password" name="password" type="password" class="signup-text-field validate">
                             <label for="password" class="signup-label">Password</label>
@@ -38,11 +37,11 @@
                         <!--<input id="password_confirmation" name="password_confirmation" type="password" class="signup-text-field validate" ng-model="Register.newUser.password_confirmation">-->
                         <!--<label for="password_confirmation" class="signup-label">Confirm Password</label>-->
                         <!--</div>-->
-                    </div>
+
                     <div class="row no-bottom">
                         <div class="col s12">
                             <div class="red-text" id="error"></div>
-                        </div>
+                        </div>t
                     </div>
                     <div class="row">
                         <div class="col s12">
