--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,17 +2,17 @@
     <div class="col s12 offset-m2 m8 offset-l3 l6">
         <div class="card-panel">
             <div class="row">
-                <div class="col s12 l6 center">
-                    <img src="/images/facebook-login-button.png" id="fb-login" onmouseover="this.src='/images/facebook-login-button-hover.png'" onmouseout="this.src='/images/facebook-login-button.png'"  />
-                </div>
-                <div class="col s12 l6 center">
-                    <div class="g-signin2"
-                         data-onsuccess="onGoogleSignIn"
-                         data-theme="dark"
-                         data-width="200"
-                         data-height="50"
-                         data-longtitle="true"></div>
-                </div>
+              <div class="col s12 l6 center">
+                  <img src="/images/facebook-login-button.png" id="fb-login" onmouseover="this.src='/images/facebook-login-button-hover.png'" onmouseout="this.src='/images/facebook-login-button.png'"  />
+              </div>
+              <div class="col s12 l6 center">
+                  <div class="g-signin2"
+                       data-onsuccess="onGoogleSignIn"
+                       data-theme="dark"
+                       data-width="200"
+                       data-height="50"
+                       data-longtitle="true"></div>
+              </div>
             </div>
             <form id="login-form" action="/login" method="post">
                 <div class="row">
@@ -82,6 +82,7 @@
 </div>
 <form id="login-with-session" action="/" method="get">
   <input type="hidden" name="sesh" id="sesh" value="">
+  <input type="hidden" name="redirectURL" id="redirectURL" value="{{redirectURL}}">
 </form>
 
 
@@ -108,14 +109,3 @@
         <a class="modal-close waves-effect waves-green btn-flat">No Thanks</a>
     </div>
 </div>
-
-<script type="text/javascript">
-var message = 'testing login';
-//ga('send', {
-//  hitType: 'event',
-//  eventCategory: 'PageViews',
-//  eventAction: 'ViewByLoggedInUser',
-//  eventLabel: message
-//});
-
-</script>
