adding caption to images if available

--- a/views/soles-single.hbs
+++ b/views/soles-single.hbs
@@ -21,6 +21,7 @@
                             <div class="materialbox-preview thumbnail">
                                 <img class="materialboxed responsive-img "
                                      src="{{ image.full }}"
+                                     data-caption="{{ image.notes }}"
                                 >
                             </div>
                         </div>
