--- a/views/login.hbs
+++ b/views/login.hbs
@@ -18,7 +18,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                         <i class="material-icons prefix">email</i>
-                        <input id="email" type="email" name="email" class="validate">
+                        <input id="email" type="email" name="email" class="validate" value="{{email}}">
                         <label for="email">Email</label>
                         <span class="helper-text" data-error="invalid email"></span>
                     </div>
@@ -46,9 +46,12 @@
                     </div>
                     <div class="center col s12">
                         <br>
-                        <a data-target="password-reset-modal" class="modal-trigger">
+                        <a href="mailto:support@startsole.org">
                             Help! I forgot my password.
                         </a>
+                        <!--<a data-target="password-reset-modal" class="modal-trigger">-->
+                            <!--Help! I forgot my password.-->
+                        <!--</a>-->
                     </div>
                 </div>
             </form>
