--- a/views/my-questions.hbs
+++ b/views/my-questions.hbs
@@ -1,6 +1,6 @@
 <div class="breadcrumb-wrapper">
     <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
-    <a class="breadcrumb">Mine</a>
+    <a class="breadcrumb">My Questions</a>
 </div>
 
 
@@ -11,7 +11,7 @@
                 <div class="col s12">
                     <ul class="tabs">
                         <li class="tab col s6"><a href="#mine">Mine</a></li>
-                        <li class="tab col s6"><a href="#favorites">Favorites</a></li>
+                        <li class="tab col s6"><a class={{fav}} href="#favorites">Favorites</a></li>
                     </ul>
                 </div>
                 <div class="col s12">
@@ -36,7 +36,7 @@
                             </div>
                         {{/if}}
                     </div>
-                    
+
                     <div id="favorites">
                             {{#if questions.favorites}}
                             <ul class="collection">
