--- a/views/my-questions.hbs
+++ b/views/my-questions.hbs
@@ -11,7 +11,7 @@
                 <div class="col s12">
                     <ul class="tabs">
                         <li class="tab col s6"><a href="#mine">Mine</a></li>
-                        <li class="tab col s6"><a class={{fav}} href="#favorites">Favorites</a></li>
+                        <li class="tab col s6"><a class="{{fav}}" href="#favorites">Favorites</a></li>
                     </ul>
                 </div>
                 <div class="col s12">
