WIP copying bug

--- a/views/partials/sole-card.hbs
+++ b/views/partials/sole-card.hbs
@@ -44,15 +44,15 @@
                href="/soles/{{id}}/reflect?sesh={{sesh}}">
                 Reflect
             </a>
-            {{!-- <a class="btn-floating grey"
+            <a class="btn-floating grey"
                href="/soles/{{id}}/delete?sesh={{sesh}}">
                 <i class="material-icons">delete</i>
-            </a> --}}
+            </a>
         {{/if}}
-        {{!-- <a class="btn-floating grey"
+        <a class="btn-floating grey"
            href="/soles/{{id}}/copy?sesh={{sesh}}">
             <i class="material-icons">content_copy</i>
-        </a> --}}
+        </a>
     </div>
 
     </div>
