--- a/views/partials/standard-picker.hbs
+++ b/views/partials/standard-picker.hbs
@@ -3,6 +3,7 @@
         <label>Subject</label>
         <select id="subject" name="subject" class="browser-default standard-picker">
             <option value="" disabled selected>Filter by subject</option>
+            <option label="All subjects" value="all" >All Subjects</option>
             <!--<option label="AmeriCorps" value="asn.d0000003">AmeriCorps</option>-->
             <option label="College Now" value="asn.d0000001">College Now</option>
             <!--<option label="Community Health Worker Certification" value="asn.d0000002">Community Health Worker Certification</option>-->
