--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -13,12 +13,9 @@
                 <li class="tab">
                     <a href="#soles">SOLEs</a>
                 </li>
-                <li class="tab">
-                    <a href="#schools">Schools</a>
-                </li>
-                <li class="tab">
-                    <a href="#students">Students</a>
-                </li>
+                <!--<li class="tab">-->
+                    <!--<a href="#schools">Schools</a>-->
+                <!--</li>-->
             </ul>
             <div id="educators">
                 <canvas id="educator-growth-chart"></canvas>
@@ -29,9 +26,6 @@
                                 <span class="card-title">Educators By Grade</span>
                                 <canvas id="educator-by-grade-chart"></canvas>
                             </div>
-                            <div class="card-action">
-                                <a href="#">More Details</a>
-                            </div>
                         </div>
                     </div>
                     <div class="col s12 m6">
@@ -40,46 +34,39 @@
                                 <span class="card-title">Educators By Subject</span>
                                 <canvas id="educator-by-subject-chart"></canvas>
                             </div>
-                            <div class="card-action">
-                                <a href="#">More Details</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="soles">
+                <canvas id="soles-growth-chart"></canvas>
+                <div class="row">
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="card-title">SOLEs By Grade</span>
+                                <canvas id="soles-by-grade-chart"></canvas>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class="card">
+                            <div class="card-content">
+                                <span class="card-title">SOLEs By Subject</span>
+                                <canvas id="soles-by-subject-chart"></canvas>
                             </div>
                         </div>
                     </div>
                 </div>
+             </div>
+            <!--<div id="schools">-->
 
-            </div>
-            <div id="soles">
-                <div class="col s6">
-                    <div class="card-panel">
-                        <!--<span class="card-title">-->
-                        <!--At a Glance-->
-                        <!--</span>-->
-                        total educators
-                        total SOLEs
-                        total students
-                        Educators with at least 1 SOLE planned
-                        SOLEs - stay above the level of naming the teacher
-                        school
-                        grade
-                        subject
-
-                        display educators, SOLEs, students on same line graph as different data sets.  Options are show educators, students, SOLEs.  Doughnut charts below update as well and show grade/subject dimensions
-                    </div>
-                </div>
-            </div>
-            <div id="schools">
-
-            </div>
-            <div id="students">
-                <div style="width: 300px; height: 300px">
-                    <canvas id="myChart"></canvas>
-                </div>
-
-            </div>
+            <!--</div>-->
 
         </div>
     </div>
 </div>
+
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
@@ -92,20 +79,20 @@
 
         // The data for our dataset
         data: {
-            labels: ["January", "February", "March", "April", "May", "June", "July", "August", "September"],
+            labels: ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
             datasets: [
                 {
                     label: "New Users 2017",
                     backgroundColor: 'rgb(255, 99, 132)',
                     borderColor: 'rgb(255, 99, 132)',
-                    data: [{{data17}}],
+                    data: [{{dashboard.userCountByMonth.[2017]}}],
                     fill: false,
                 },
                 {
                     label: "New Users 2018",
                     backgroundColor: 'rgb(47,166,154)',
                     borderColor: 'rgb(47,166,154)',
-                    data: [{{data18}}],
+                    data: [{{dashboard.userCountByMonth.[2018]}}],
                     fill: false,
                 }]
         },
@@ -114,10 +101,10 @@
         options: {}
     });
 
-    var educatorByGradeChartCanvas = document.getElementById('educator-by-grade-chart');
+    var educatorByGradeChartCanvas = document.getElementById('educator-by-grade-chart').getContext('2d');
     var educatorByGradeData = {
         datasets: [{
-            data: [15, 78, 35, 55, 12],
+            data: [{{dashboard.userCountByGradeBand}}],
             backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
         }],
 
@@ -130,140 +117,129 @@
             'Other'
         ]
     };
-
-    var educatorBySubjectChartCanvas = document.getElementById('educator-by-subject-chart').getContext('2d');
-
-
-    var educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
+    var educatorByGradeChart = new Chart(educatorByGradeChartCanvas, {
         type: 'doughnut',
         data : educatorByGradeData
     });
+//    educatorByGradeChartCanvas.onclick = function(evt) {
+//        console.log("canvas click!");
+//        var activePoints = educatorByGradeChart.getElementsAtEvent(evt);
+//        if (activePoints[0]) {
+//            var chartData = activePoints[0]['_chart'].config.data;
+//            var idx = activePoints[0]['_index'];
+//
+//            var label = chartData.labels[idx];
+//            var value = chartData.datasets[0].data[idx];
+//
+//            var url = "http://example.com/?label=" + label + "&value=" + value;
+//            console.log(url);
+//            alert(url);
+//        }
+//    };
+
+    var educatorBySubjectChartCanvas = document.getElementById('educator-by-subject-chart').getContext('2d');
+    var educatorBySubjectData = {
+        datasets: [{
+            data: [{{dashboard.userCountBySubjectBand}}],
+            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
+        }],
+
+        // These labels appear in the legend and in the tooltips when hovering different arcs
+        labels: [
+            'English',
+            'Math',
+            'Science',
+            'Social Studies',
+            'Other'
+        ]
+    };
     var educatorBySubjectChart = new Chart(educatorBySubjectChartCanvas, {
         // The type of chart we want to create
         type: 'doughnut',
 
         // The data for our dataset
-        data : {
-            datasets: [{
-                data: [50, 40, 35, 55, 42],
-                backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
-            }],
+        data : educatorBySubjectData,
 
-            // These labels appear in the legend and in the tooltips when hovering different arcs
-            labels: [
-                'English',
-                'Math',
-                'Science',
-                'Social Studies',
-                'Other'
-            ]
+        // Configuration options go here
+        options: {}
+    });
+
+    var soleGrowthChartCanvas = document.getElementById('soles-growth-chart').getContext('2d');
+    var soleGrowthChart = new Chart(soleGrowthChartCanvas, {
+        // The type of chart we want to create
+        type: 'line',
+
+        // The data for our dataset
+        data: {
+            labels: ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
+            datasets: [
+                {
+                    label: "SOLEs Created 2017",
+                    backgroundColor: 'rgb(255, 99, 132)',
+                    borderColor: 'rgb(255, 99, 132)',
+                    data: [{{dashboard.soleCountByMonth.[2017]}}],
+                    fill: false,
+                },
+                {
+                    label: "SOLEs Created 2018",
+                    backgroundColor: 'rgb(47,166,154)',
+                    borderColor: 'rgb(47,166,154)',
+                    data: [{{dashboard.soleCountByMonth.[2018]}}],
+                    fill: false,
+                }]
         },
 
         // Configuration options go here
         options: {}
     });
-    //IDEAS
-    //limit these charts to 5 options (Math, Science, ELA, SS, and other) - then click segment for details
-    //limit grade to 'Elementary', 'Middle', and 'High' - click for details
 
-    educatorByGradeChartCanvas.onclick = function(evt) {
-        console.log("canvas click!");
-        var activePoints = educatorByGradeChart.getElementsAtEvent(evt);
-        if (activePoints[0]) {
-            var chartData = activePoints[0]['_chart'].config.data;
-            var idx = activePoints[0]['_index'];
-
-            var label = chartData.labels[idx];
-            var value = chartData.datasets[0].data[idx];
-
-            var url = "http://example.com/?label=" + label + "&value=" + value;
-            console.log(url);
-            alert(url);
-        }
-    };
-
-
-
-    //student example with working clicks
-
-    var data = {
+    var solesByGradeChartCanvas = document.getElementById('soles-by-grade-chart').getContext('2d');
+    var solesByGradeData = {
         datasets: [{
-            data: [300, 50, 100],
-            backgroundColor: [
-                "#F7464A",
-                "#46BFBD",
-                "#FDB45C"
-            ]
+            data: [{{dashboard.soleCountByGradeBand}}],
+            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
         }],
+
+        // These labels appear in the legend and in the tooltips when hovering different arcs
         labels: [
-            "Red",
-            "Green",
-            "Yellow"
+            'Pre-K & Kindergarten',
+            'Elementary',
+            'Middle',
+            'High School',
+            'Other'
         ]
     };
+    var solesByGradeChart = new Chart(solesByGradeChartCanvas, {
+        type: 'doughnut',
+        data : solesByGradeData
+    });
 
-    $(document).ready(
-            function() {
-                var canvas = document.getElementById("myChart");
-                var ctx = canvas.getContext("2d");
-                var myNewChart = new Chart(ctx, {
-                    type: 'doughnut',
-                    data: data
-                });
+    var solesBySubjectChartCanvas = document.getElementById('soles-by-subject-chart').getContext('2d');
+    var solesBySubjectData = {
+        datasets: [{
+            data: [{{dashboard.userCountBySubjectBand}}],
+            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
+        }],
 
-                canvas.onclick = function(evt) {
-                    console.log("clicked canvas!");
-                    var activePoints = myNewChart.getElementsAtEvent(evt);
-                    if (activePoints[0]) {
-                        var chartData = activePoints[0]['_chart'].config.data;
-                        var idx = activePoints[0]['_index'];
+        // These labels appear in the legend and in the tooltips when hovering different arcs
+        labels: [
+            'English',
+            'Math',
+            'Science',
+            'Social Studies',
+            'Other'
+        ]
+    };
+    var solesBySubjectChart = new Chart(solesBySubjectChartCanvas, {
+        // The type of chart we want to create
+        type: 'doughnut',
 
-                        var label = chartData.labels[idx];
-                        var value = chartData.datasets[0].data[idx];
+        // The data for our dataset
+        data : solesBySubjectData,
 
-                        var url = "http://example.com/?label=" + label + "&value=" + value;
-                        console.log(url);
-                        alert(url);
-                    }
-                };
-                educatorByGradeChartCanvas.onclick = function(evt) {
-                    console.log("clicked grade chart!");
-                    var activePoints = educatorByGradeChart.getElementsAtEvent(evt);
-                    if (activePoints[0]) {
-                        var chartData = activePoints[0]['_chart'].config.data;
-                        var idx = activePoints[0]['_index'];
-
-                        var label = chartData.labels[idx];
-                        var value = chartData.datasets[0].data[idx];
-
-                        var url = "http://example.com/?label=" + label + "&value=" + value;
-                        console.log(url);
-                        alert(url);
-                    }
-                };
-            }
-    );
-
-
-
-
-
-
-    //    function addData(chart, label, data) {
-//        chart.data.labels.push(label);
-//        chart.data.datasets.forEach((dataset) => {
-//            dataset.data.push(data);
-//    });
-//        chart.update();
-//    }
-//
-//    function removeData(chart) {
-//        chart.data.labels.pop();
-//        chart.data.datasets.forEach((dataset) => {
-//            dataset.data.pop();
-//    });
-//        chart.update();
-//    }
-
+        // Configuration options go here
+        options: {}
+    });    
+    
 </script>
 
