--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 <div class="row" style="padding-top:20px;">
 
-    <div class="col s12 offset-m1 m10 offset-l3 l6">
+    <div class="col s12 offset-m1 m10 {{#if roleData.isAdmin}}{{else}}offset-l3{{/if}} l6">
 
         <div class="card">
             <div class="card-content center-align">
@@ -18,15 +18,31 @@
     </div>
 
     {{#if roleData.isAdmin}}
-        <div class="col s12 offset-m1 m10 offset-l3 l6">
-            <div class="card-panel">
-                <div class="row center-align">
-                    <h3>Administration</h3>
-                    <a href="/dashboard/question-approval?sesh={{sesh}}" class="waves-effect waves-light btn">Question Approval</a>
-                    <br><br>
-                    <a href="/dashboard?sesh={{sesh}}" class="waves-effect waves-light btn">Dashboard</a>
-                    <!--<a href="/dashboard/sole-approval?sesh={{sesh}}" class="waves-effect waves-light btn">SOLE-->
-                        <!--Approval</a>-->
+        <div class="col s12 offset-m1 m10 l6">
+            <div class="card">
+                <div class="card-content center-align">
+                    {{#if ring.name}}
+                        <h5>{{ring.name}}</h5>
+                    {{else}}
+                        <h5>Administration</h5>
+                        <img src="/images/logos/logo.svg" alt="" class="hide-on-small-only">
+                    {{/if}}
+                    <div class="row">
+                        <div class="col s12 m6">
+                            <i class="medium material-icons">supervisor_account</i>
+                            <br>
+                            <p class="flow-text">{{ring.membershipCount}} Educators</p>
+                        </div>
+                        <div class="col s12 m6 center-align">
+                            <i class="medium material-icons">assessment</i>
+                            <br>
+                            <p class="flow-text">{{ring.id}} SOLEs</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-action center-align">
+                    <a href="/dashboard/question-approval?sesh={{sesh}}">Question Approval</a>
+                    <a href="/dashboard?sesh={{sesh}}&ring={{ring.id}}">Dashboard</a>
                 </div>
             </div>
         </div>
