--- a/views/soles-add.hbs
+++ b/views/soles-add.hbs
@@ -88,6 +88,7 @@
                         <option value="edu.10">Tenth Grade</option>
                         <option value="edu.11">Eleventh Grade</option>
                         <option value="edu.12">Twelfth Grade</option>
+                        <option value="edu.adulteducation">Adult Education</option>
                         {{/select}}
                     </select>
                     <label>What grade is your class?</label>
