finishing the laser cut easter egg thing

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -17,11 +17,10 @@
                 <p>Member since {{user.createdAt}}</p>
             </div>
             <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Super Secret!
+                <span class="card-title grey-text text-darken-4">
                     <i class="material-icons right">close</i>
                 </span>
-                <p>You found the secret SOLE area!  Email support@startsole.org with the subject line '↑↑↓↓←→←→BA'
-                    to claim your prize</p>
+                <p></p>
             </div>
         </div>
 
