--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,15 +13,15 @@
                 <img src="{{user.thumb._url}}" alt="profile-picture" class="circle responsive-img profile-thumb">
             {{/if}}
             <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">{{user.name}}</span>
+                <span class="card-title grey-text text-darken-4">{{user.name}}</span>
                 <p>Member since {{user.createdAt}}</p>
             </div>
-            <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">
-                    <i class="material-icons right">close</i>
-                </span>
-                <p></p>
-            </div>
+            <!--<div class="card-reveal">-->
+                <!--<span class="card-title grey-text text-darken-4">-->
+                    <!--<i class="material-icons right">close</i>-->
+                <!--</span>-->
+                <!--<p></p>-->
+            <!--</div>-->
         </div>
 
     </div>
