finishing the laser cut easter egg thing

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,7 +7,7 @@
     <div class="col s12">
 
         <div class="card {{#if user.thumb._url}}profile-header-card{{/if}}">
-            <div class="card-image waves-effect waves-block waves-light activator profile-bg-image">
+            <div class="card-image waves-effect waves-block waves-light profile-bg-image">
             </div>
             {{#if user.thumb._url}}
                 <img src="{{user.thumb._url}}" alt="profile-picture" class="circle responsive-img profile-thumb">
