--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,33 +19,30 @@
     </div>
 
     {{#if roleData.isRingleader }}
-        <div class="col s12 offset-m1 m10 l6">
-            <div class="card">
-                <div class="card-content center-align">
-                    {{#if ring.name}}
-                        <h5>{{ring.name}}</h5>
-                    {{else}}
-                        <h5>Administration</h5>
-                        <img src="/images/logos/logo.svg" alt="" class="hide-on-small-only">
-                    {{/if}}
-                    <div class="row">
-                        <div class="col s12 m6">
-                            <i class="medium material-icons">supervisor_account</i>
-                            <br>
-                            <p class="flow-text">{{ring.membershipCount}} Educators</p>
-                        </div>
-                        <div class="col s12 m6 center-align">
-                            <i class="medium material-icons">assessment</i>
-                            <br>
-                            <p class="flow-text">{{ring.soleCount}} SOLEs</p>
+        {{#each rings}}
+            <div class="col s12 offset-m1 m10 l6">
+                <div class="card">
+                    <div class="card-content center-align">
+                        <h5>{{name}}</h5>
+                        <div class="row">
+                            <div class="col s12 m6">
+                                <i class="medium material-icons">supervisor_account</i>
+                                <br>
+                                <p class="flow-text">{{membershipCount}} Educators</p>
+                            </div>
+                            <div class="col s12 m6 center-align">
+                                <i class="medium material-icons">assessment</i>
+                                <br>
+                                <p class="flow-text">{{soleCount}} SOLEs</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="card-action center-align">
-                    <!--<a href="/dashboard/question-approval?sesh={{sesh}}">Question Approval</a>-->
-                    <a href="/dashboard?sesh={{sesh}}&ring={{ring.id}}">Dashboard</a>
+                    <!--<div class="card-action center-align">-->
+                        <!--&lt;!&ndash;<a href="/dashboard/question-approval?sesh={{sesh}}">Question Approval</a>&ndash;&gt;-->
+                        <!--<a href="/dashboard?sesh={{sesh}}&ring={{id}}">Dashboard</a>-->
+                    <!--</div>-->
                 </div>
             </div>
-        </div>
+        {{/each}}
     {{/if}}
 </div>
