changing rings to manage multiple rings

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,5 @@
 <div class="row" style="padding-top:20px;">
-    
+
 
     <div class="col s12 offset-m1 m10 {{#if roleData.isRingleader }}{{else}}offset-l3{{/if}} l6">
 
@@ -37,10 +37,10 @@
                             </div>
                         </div>
                     </div>
-                    <!--<div class="card-action center-align">-->
-                        <!--&lt;!&ndash;<a href="/dashboard/question-approval?sesh={{sesh}}">Question Approval</a>&ndash;&gt;-->
-                        <!--<a href="/dashboard?sesh={{sesh}}&ring={{id}}">Dashboard</a>-->
-                    <!--</div>-->
+                    <div class="card-action center-align">
+                        <!--<a href="/dashboard/question-approval?sesh={{sesh}}">Question Approval</a>-->
+                        <a href="/dashboard?sesh={{../sesh}}&ring={{id}}">Dashboard</a>
+                    </div>
                 </div>
             </div>
         {{/each}}
