updated resource tags and added 2 new resources

--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -17,12 +17,13 @@
                         <option value="question-help">Help with Question phase</option>
                         <option value="investigation-help">Help with Investigation phase</option>
                         <option value="review-help">Help with Review phase</option>
-                        <option value="paraphrasing">Paraphrasing support</option>
+                        <option value="paraphrasing">Paraphrasing Support</option>
                         <option value="posters">Posters</option>
                         <option value="rubric">Rubrics</option>
                         <option value="self-assessment">Self-assessments</option>
-                        <option value="sentence-starters">Sentence starters</option>
-                        <option value="organizer">Student organizer</option>
+                        <option value="sentence-starters">Sentence Starters</option>
+                        <option value="organizer">Student Organizer</option>
+                        <option value="training">Training Materials</option>
                     </select>
                     <label>Filter</label>
                 </div>
