--- a/views/register.hbs
+++ b/views/register.hbs
@@ -107,3 +107,30 @@
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script type="text/javascript" src="/js/login.js"></script>
 <script type="text/javascript" src="/js/register.js"></script>
+
+<script type="text/javascript">
+$("#initial-registration-form").submit(function (event) {
+
+  event.preventDefault();
+
+  var first_name  = $('#first_name').val(),
+      last_name   = $('#last_name').val(),
+      email       = $('#email').val().toLowerCase(),
+      password    = $('#password').val(),
+      urlParams = new URLSearchParams(window.location.search),
+      refer = urlParams.get('r');
+
+  registerNewUser (first_name, last_name, email, password, refer).then((sesh)=>{
+    console.log('post-register')
+    $('#sesh').val(sesh);
+    $('#firstname').val(first_name);
+    $('#lastname').val(last_name);
+    $('#final-registration-form').submit();
+  }).catch(err=>{
+    //if there's an error signing up, eg if a user already exists with that email address, then show an error to the user
+    $('#error').html(err.message.message)
+  })
+
+});
+
+</script>
